--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -23,10 +23,10 @@ jobs:
           npm install
           npm ci
           npm run build
-          ls -al /home/runner/work/vuepresstest/vuepresstest/.vuepress/dist
+          ls -al /home/runner/work/vuepresstest/vuepresstest/docs/.vuepress/dist
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           BRANCH: gh-pages
-          FOLDER: .vuepress/dist
+          FOLDER: docs/.vuepress/dist
