--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "repository": "https://github.com/jjlong150/vuepresstest/vuepresstest",
   "scripts": {
-    "dev": "vuepress dev .",
-    "build": "vuepress build ."
+    "dev": "vuepress dev docs",
+    "build": "vuepress build docs"
   },
   "license": "MIT",
   "devDependencies": {
